# NBodySimulatorPractice

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: BarnesHutMethod.cpp  BarnesHutMethod.h  Constants.h  EvolutionAlgorithmInterface.cpp  EvolutionAlgorithmInterface.h  EvolutionSimulation.h  FastMultipoleMethod.cpp  FastMultipoleMethod.h  NaiveMethod.cpp  NaiveMethod.h  Octree.cpp  Octree.h  OutputUtils.cpp  OutputUtils.h  PhysicalObject.h  SystemInitializers.h  SystemOutput.cpp  SystemOutput.h  Vector3D.cpp  Vector3D.h
src/: BarnesHut.cpp  DataGenerator.cpp  FMM.cpp  NaiveMethod.cpp
